--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3507,7 +3507,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "014e989f",
+   "id": "7106db62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3518,7 +3518,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "c8d091f9",
+   "id": "08ef3970",
    "metadata": {},
    "outputs": [
     {
@@ -3556,7 +3556,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "0b1b2a99",
+   "id": "c29b8c8b",
    "metadata": {},
    "outputs": [
     {
@@ -3710,7 +3710,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "bae666d1",
+   "id": "e532ac6b",
    "metadata": {},
    "outputs": [
     {
@@ -3859,7 +3859,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "4be45471",
+   "id": "4b5f6bbf",
    "metadata": {},
    "outputs": [
     {
@@ -4004,7 +4004,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "dc334ef3",
+   "id": "1b55e667",
    "metadata": {},
    "outputs": [
     {
@@ -4149,7 +4149,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "5fc21a1a",
+   "id": "13f2505c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4166,7 +4166,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "af6daeea",
+   "id": "1cb1ffa8",
    "metadata": {},
    "outputs": [
     {
@@ -4306,7 +4306,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "03506dc2",
+   "id": "6fea13ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4323,7 +4323,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "1ebd11bd",
+   "id": "22bb1f11",
    "metadata": {},
    "outputs": [
     {
@@ -4360,7 +4360,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "f53a6ad6",
+   "id": "0f5359a1",
    "metadata": {},
    "outputs": [
     {
@@ -4381,7 +4381,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "57091ff2",
+   "id": "1cae61b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4398,7 +4398,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "087e209a",
+   "id": "1462c44d",
    "metadata": {},
    "outputs": [
     {
@@ -4435,7 +4435,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "15dc843f",
+   "id": "ee737bd7",
    "metadata": {},
    "outputs": [
     {
@@ -4456,7 +4456,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "69b7e35f",
+   "id": "add71b83",
    "metadata": {},
    "outputs": [
     {
@@ -4562,7 +4562,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "b3998f63",
+   "id": "77cb721f",
    "metadata": {},
    "outputs": [
     {
@@ -4668,7 +4668,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "458a4e29",
+   "id": "cd89c57c",
    "metadata": {},
    "outputs": [
     {
@@ -4775,7 +4775,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "d38ee620",
+   "id": "22f1f0ae",
    "metadata": {},
    "outputs": [
     {
@@ -4882,7 +4882,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "05cff53a",
+   "id": "1087444d",
    "metadata": {},
    "outputs": [
     {
@@ -4912,7 +4912,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "9e34e7e6",
+   "id": "c6054a2c",
    "metadata": {},
    "outputs": [
     {
@@ -4951,7 +4951,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "7ba7cb18",
+   "id": "9a6ac60c",
    "metadata": {},
    "outputs": [
     {
@@ -4978,7 +4978,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "16d99af8",
+   "id": "0cd2ea19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4990,7 +4990,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "4259d7ec",
+   "id": "4d41c57f",
    "metadata": {},
    "outputs": [
     {
@@ -5328,7 +5328,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "2cd08943",
+   "id": "48ad81cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5347,7 +5347,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "24d76c00",
+   "id": "d8fcec31",
    "metadata": {},
    "outputs": [
     {
@@ -5373,7 +5373,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "b5d5d8c9",
+   "id": "3d7afdf5",
    "metadata": {},
    "outputs": [
     {
@@ -5492,7 +5492,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "6b859a66",
+   "id": "da9ed8cd",
    "metadata": {},
    "outputs": [
     {
@@ -5614,7 +5614,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "2431edf6",
+   "id": "cd943c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5626,7 +5626,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "30e4acd2",
+   "id": "7d55afa5",
    "metadata": {},
    "outputs": [
     {
@@ -5790,7 +5790,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "8a03026c",
+   "id": "b58ed663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5809,7 +5809,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "81d45094",
+   "id": "81feea36",
    "metadata": {},
    "outputs": [
     {
@@ -5911,7 +5911,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "50f7afc4",
+   "id": "a1e7dbcc",
    "metadata": {},
    "outputs": [
     {
@@ -6015,8 +6015,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 182,
+   "id": "c74fa8a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "f0fcde2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "    \"Average Math Score\" : type_math_scores,\n",
+    "    \"Average Reading Score\" : type_reading_scores,\n",
+    "    \"% Passing Math\" : type_passing_math,\n",
+    "    \"% Passing Reading\" : type_passing_reading,\n",
+    "    \"% Overall Passing\" : type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "c2c2ffde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "725066ea",
+   "id": "990ce714",
    "metadata": {},
    "outputs": [],
    "source": []
