Final effort for challenge work

--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -1872,12 +1872,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93.18568994889267"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Step 12. Replace the passing math percent for Thomas High School in the per_school_summary_df.\n",
-    "per_school_summary_df.loc[\"Thomas High School\",\"% Passing Math\"] = THS_passing_math_percentage"
+    "per_school_summary_df.loc[\"Thomas High School\",\"% Passing Math\"]"
    ]
   },
   {
